--- a/example/views/index.html
+++ b/example/views/index.html
@@ -2,7 +2,7 @@
 <!-- served from your routes in server.js -->
 <!DOCTYPE html>
 <meta charset="utf-8">
-<title>TFJS Firebase example</title>
+<title>MIRNet-TFJS</title>
 <div>
   <input id="imageInput" type="file" class="file-select" accept="image/*" />
   <br />
